Use HTTPS instead of HTTP to resolve dependencies
This fixes a security vulnerability in this project where the `pom.xml`
files were configuring Maven to resolve dependencies over HTTP instead of
HTTPS.

Signed-off-by: Jonathan Leitschuh <Jonathan.Leitschuh@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 	<repositories>
 		<repository>
 			<id>dev.davidsoergel.com</id>
-			<url>http://dev.davidsoergel.com/nexus/content/groups/public</url>
+			<url>https://dev.davidsoergel.com/nexus/content/groups/public</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -89,7 +89,7 @@
 		</repository>
 		<repository>
 			<id>dev.davidsoergel.com.snapshot</id>
-			<url>http://dev.davidsoergel.com/nexus/content/repositories/snapshots</url>
+			<url>https://dev.davidsoergel.com/nexus/content/repositories/snapshots</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
